--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 
 <body>
   <script src="js/scripts.js"></script>
+  <p>
+  Currently Formulating.
+  </p>
+  <p>
+  For more information, please contact info@karmabiosciences.com
+  </p>
 </body>
 </html>
