--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <body>
   <script src="js/scripts.js"></script>
+  <main>
   <p>
   Currently Formulating.
   </p>
   <p>
   For more information, please contact info@karmabiosciences.com
   </p>
+  </main>
 </body>
 </html>
