--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <script src="js/scripts.js"></script>
   <main>
-   <p>https://user-images.githubusercontent.com/71662655/93832466-b09b1180-fc2a-11ea-96e0-026b742a6aaa.png</p>
+   <img>https://user-images.githubusercontent.com/71662655/93832466-b09b1180-fc2a-11ea-96e0-026b742a6aaa.png</img>
   <p>
   Currently Formulating.
   </p>
